[UPDATE] News Feed в FeedService: 1) Убрал дублирование кода для получения подписчиков батчами. 2) Добавил фолбэк на случай падения UserService при запросе на получения пользователей. 3) Добавил "красивую" обработку try-catch. 4) Добавил коментарии к фиду, теперь сборка фида завершена.
в NewsFeedCache
1) Убрал неиспользуемые\заменённые методы.
2) Добавил логику получения коментариев.

Почистил от лишних методов и комментариев.

Вынести луа скрипты отдельно. Протестить юзкейсы решение.